File generated by Skaffolder - user: paraoansergiu@gmail.com

--- a/client/src/app/components/navbar.component.html
+++ b/client/src/app/components/navbar.component.html
@@ -9,6 +9,26 @@
                 <a class="nav-link" routerLink="/home">Home </a>
             </li>
             <!-- START LINK MENU -->
+            <li class="nav-item" routerLinkActive="active">
+               <a class="nav-link" routerLink="/authors">Author</a>
+            </li>
+        
+            <li class="nav-item" routerLinkActive="active">
+               <a class="nav-link" routerLink="/books">Book</a>
+            </li>
+        
+            <li class="nav-item" routerLinkActive="active">
+               <a class="nav-link" routerLink="/carts">Cart</a>
+            </li>
+        
+            <li class="nav-item" routerLinkActive="active">
+               <a class="nav-link" routerLink="/genres">Genre</a>
+            </li>
+        
+            <li class="nav-item" routerLinkActive="active">
+               <a class="nav-link" routerLink="/users">User</a>
+            </li>
+        
  <!-- END LINK MENU -->
         </ul>
     </div>
