--- a/client/src/app/pages/home/home.component.html
+++ b/client/src/app/pages/home/home.component.html
@@ -7,5 +7,20 @@
 <!-- SEARCH FORM -->
 <div>
   <!-- START LINKS -->
+    <div>
+        <a routerLink="/users" routerLinkActive="active">Link to List UserList</a>
+    </div>
+    <div>
+        <a routerLink="/books" routerLinkActive="active">Link to List BookList</a>
+    </div>
+    <div>
+        <a routerLink="/carts" routerLinkActive="active">Link to List CartList</a>
+    </div>
+    <div>
+        <a routerLink="/genres" routerLinkActive="active">Link to List GenreList</a>
+    </div>
+    <div>
+        <a routerLink="/authors" routerLinkActive="active">Link to List AuthorList</a>
+    </div>
  <!-- END LINKS -->
 </div>
